syntax = "proto3";

package token;

option go_package = "./proto";

service TokenService {
  rpc ExistsToken (ExistsTokenRequest) returns (ExistsTokenResponse);
}

message ExistsTokenRequest {
  string token = 1;
}

message ExistsTokenResponse {
  bool exists = 1;
  string id = 2;
}
